WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176897
[Harfbuzz] Wrong offset returned by HarfBuzzShaper::offsetForPosition() when target point is at the middle of a character
https://bugs.webkit.org/show_bug.cgi?id=176897
Summary
[Harfbuzz] Wrong offset returned by HarfBuzzShaper::offsetForPosition() when ...
Carlos Garcia Campos
Reported
2017-09-14 05:30:14 PDT
This caused tests fast/multicol/hit-test-end-of-column-with-line-height.html and fast/multicol/newmulticol/compare-with-old-impl/hit-test-end-of-column-with-line-height.html to start failing.
Attachments
Patch
(2.32 KB, patch)
2017-09-14 05:34 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-09-14 05:34:33 PDT
Created
attachment 320763
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-09-14 08:37:53 PDT
Committed
r222020
: <
http://trac.webkit.org/changeset/222020
>
Radar WebKit Bug Importer
Comment 3
2017-09-27 12:30:27 PDT
<
rdar://problem/34693401
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug