[Harfbuzz] Wrong offset returned by HarfBuzzShaper::offsetForPosition() when target point is at the middle of a character https://bugs.webkit.org/show_bug.cgi?id=176897

Reviewed by Michael Catanzaro.

We should include the character when the point is greater than the center of the character.

Fixes: fast/multicol/hit-test-end-of-column-with-line-height.html
       fast/multicol/newmulticol/compare-with-old-impl/hit-test-end-of-column-with-line-height.html

* platform/graphics/harfbuzz/HarfBuzzShaper.cpp:
(WebCore::HarfBuzzShaper::HarfBuzzRun::characterIndexForXPosition):

Canonical link: https://commits.webkit.org/193354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222020 268f45cc-cd09-0410-ab3c-d52691b4dbfc